--- a/TRHook/TRHook.csproj
+++ b/TRHook/TRHook.csproj
@@ -56,6 +56,7 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Hook\ComponentExtensions.cs"/>
         <Compile Include="Hook\SpeedHackChecker.cs"/>
         <Compile Include="Main.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
